[tool.poetry]
name = "fastapi-notification-pin-app"
version = "0.1.0"
description = "API for pin notification via WhatsApp"
authors = ["Martin Stefanelli <cstefanelli@fi.uba.ar>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fastapi_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
python-dotenv = "^0.21.0"
uvicorn = "^0.18.3"
twilio = "^7.14.1"
firebase-admin = "^6.0.0"
datadog = "^0.44.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
requests = "^2.28.1"
black = "^22.8.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"